--- a/docker/diagnostics/static/index.html
+++ b/docker/diagnostics/static/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>conservify: Diagnostics</title>
+		<title>conservify: diagnostics</title>
 		<link rel="stylesheet" href="App.css">
 	</head>
 	<body>
